--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-notification-component": "^1.1.4",
+    "react-notifications-component": "^4.0.1",
     "react-router-dom": "^7.1.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.3",
+    "tailwind": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,6 +41,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.2.0"
+    "gh-pages": "^6.2.0",
+    "webpack-cli": "^6.0.1"
   }
 }
